# Projects2025

./: .gitignore  Project status.xlsx  README.md  test.sh
1.EDA/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
1.EDA/docs/: modules.md
2.Irisflower/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
2.Irisflower/Notebooks/: best_rf_model.pkl  iris.ipynb
2.Irisflower/tests/: test_foo.py
EDA/: CONTRIBUTING.md  commit.py  mkdocs.yml  pyproject.toml
EDA/Notebooks/: test.ipynb
EDA/docker/: Dockerfile
EDA/docs/: index.md
EDA/tests/: test_foo.py  test_sample.py
Learning Goals/: EDA.html  IrisFlower.html
