[tool.poetry]
name = "irisflower"
version = "0.0.1"
description = "To learn image and its processing at beginner level"
authors = ["Shazad Khan <fshazadabu@gmail.com>"]
repository = "https://github.com/shazadabu2/Irisflower"
documentation = "https://shazadabu2.github.io/Irisflower/"
readme = "README.md"
packages = [
  {include = "irisflower"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
black = "^25.1.0"
pylint = "^3.3.5"
flake8 = "^7.1.2"
ipykernel = "^6.29.5"
dvc = "^3.59.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["irisflower"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
